--- a/mirage-fs.opam
+++ b/mirage-fs.opam
@@ -2,18 +2,15 @@ opam-version: "1.2"
 maintainer:   "Thomas Gazagnaire <thomas@gazagnaire.org>"
 authors:      ["Thomas Gazagnaire <thomas@gazagnaire.org>"]
 homepage:     "https://github.com/mirage/mirage-fs"
-doc:          "https://mirage.github.io/mirage-fs/"
+doc:          "http://docs.mirage.io/mirage-fs/"
 license:      "ISC"
 dev-repo:     "https://github.com/mirage/mirage-fs.git"
 bug-reports:  "https://github.com/mirage/mirage-fs/issues"
 tags:         ["org:mirage"]
 
-build: ["ocaml" "pkg/pkg.ml" "build" "--pinned" "%{pinned}%" ]
-
+build: [["jbuilder" "build" "-p" name "-j" jobs]]
 depends: [
-  "ocamlfind" {build}
-  "ocamlbuild" {build}
-  "topkg" {build}
+  "jbuilder" {build & >="1.0+beta7"}
   "fmt"
   "mirage-device" {>= "1.0.0"}
 ]
