--- a/mirage-fs.opam
+++ b/mirage-fs.opam
@@ -8,7 +8,11 @@ dev-repo:     "https://github.com/mirage/mirage-fs.git"
 bug-reports:  "https://github.com/mirage/mirage-fs/issues"
 tags:         ["org:mirage"]
 
-build: [["jbuilder" "build" "-p" name "-j" jobs]]
+build: [
+  ["jbuilder" "subst"] {pinned}
+  ["jbuilder" "build" "-p" name "-j" jobs]
+]
+
 depends: [
   "jbuilder" {build & >="1.0+beta7"}
   "fmt"
