--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ env:
   - PINS="mirage-fs:. mirage-fs-lwt:."
   matrix:
   - OCAML_VERSION=4.04 PACKAGE="mirage-fs-lwt"
+  - OCAML_VERSION=4.05 PACKAGE="mirage-fs-lwt"
   - OCAML_VERSION=4.06 PACKAGE="mirage-fs-lwt"
