--- a/mirage-fs-lwt.opam
+++ b/mirage-fs-lwt.opam
@@ -1,10 +1,10 @@
-opam-version: "1.2"
+opam-version: "2.0"
 maintainer:   "Thomas Gazagnaire <thomas@gazagnaire.org>"
 authors:      ["Thomas Gazagnaire <thomas@gazagnaire.org>"]
 homepage:     "https://github.com/mirage/mirage-fs"
 doc:          "https://mirage.github.io/mirage-fs/"
 license:      "ISC"
-dev-repo:     "https://github.com/mirage/mirage-fs.git"
+dev-repo:     "git+https://github.com/mirage/mirage-fs.git"
 bug-reports:  "https://github.com/mirage/mirage-fs/issues"
 tags:         ["org:mirage"]
 
@@ -14,7 +14,8 @@ build: [
 ]
 
 depends: [
-  "dune"
+  "ocaml" {>= "4.04.2"}
+  "dune" {build}
   "mirage-fs" {>= "1.0.0"}
   "mirage-kv-lwt"
   "lwt"
@@ -22,4 +23,4 @@ depends: [
   "cstruct-lwt"
 ]
 
-available: [ ocaml-version >= "4.04.2"]
+synopsis: "MirageOS signatures for filesystem devices"
