--- a/mirage-fs.opam
+++ b/mirage-fs.opam
@@ -21,3 +21,10 @@ depends: [
 ]
 
 synopsis: "MirageOS signatures for filesystem devices"
+description: """
+mirage-fs provides the `[Mirage_fs.S][fs]` and `[Mirage_fs_lwt.S]` signatures
+the MirageOS filesystem devices should implement.
+
+[fs]: http://mirage.github.io/mirage-fs/Mirage_fs.html
+[fslwt]: http://mirage.github.io/mirage-fs/Mirage_fs_lwt.html
+"""
