--- a/mirage-fs-lwt.opam
+++ b/mirage-fs-lwt.opam
@@ -17,7 +17,7 @@ depends: [
   "ocaml" {>= "4.04.2"}
   "dune" {build}
   "mirage-fs" {>= "1.0.0"}
-  "mirage-kv-lwt"
+  "mirage-kv-lwt" {>= "2.0.0"}
   "lwt"
   "cstruct" {>= "1.9.0"}
   "cstruct-lwt"
