--- a/src/dune
+++ b/src/dune
@@ -1,4 +1,4 @@
 (library
  (name        mirage_fs)
  (public_name mirage-fs)
- (libraries   fmt mirage-device))
+ (libraries   fmt mirage-device lwt cstruct mirage-kv))
