--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: c
-install: wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-opam.sh
-script: bash -ex .travis-opam.sh
-dist: trusty
+install: wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-docker.sh
+script: bash -ex .travis-docker.sh
+sudo: false
+services:
+  - docker
 env:
   global:
-  - PINS="mirage-device.2.0.0:git+https://github.com/hannesm/mirage-device.git#easy mirage-kv.3.0.0:git+https://github.com/hannesm/mirage-kv.git#easy"
   - PACKAGE="mirage-fs"
+  - DISTRO="alpine"
   matrix:
   - OCAML_VERSION=4.06
   - OCAML_VERSION=4.07
