--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: c
-install: wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-opam.sh
-script: bash -ex .travis-opam.sh
-dist: trusty
+install: wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-docker.sh
+script: bash -ex .travis-docker.sh
+sudo: false
+services:
+  - docker
 env:
   global:
-  - PINS="mirage-fs:. mirage-fs-lwt:."
+  - PACKAGE="mirage-fs"
+  - DISTRO="alpine"
   matrix:
-  - OCAML_VERSION=4.04 PACKAGE="mirage-fs"
-  - OCAML_VERSION=4.05 PACKAGE="mirage-fs-lwt"
-  - OCAML_VERSION=4.06 PACKAGE="mirage-fs-lwt"
-  - OCAML_VERSION=4.07 PACKAGE="mirage-fs-lwt"
+  - OCAML_VERSION=4.06
+  - OCAML_VERSION=4.07
+  - OCAML_VERSION=4.08
+  - OCAML_VERSION=4.09
