--- a/mirage-fs.opam
+++ b/mirage-fs.opam
@@ -14,17 +14,21 @@ build: [
 ]
 
 depends: [
-  "ocaml" {>= "4.04.2"}
+  "ocaml" {>= "4.06.0"}
   "dune"
   "fmt"
-  "mirage-device" {>= "1.0.0"}
+  "mirage-device" {>= "2.0.0"}
+  "lwt" {>= "4.4.0"}
+  "cstruct" {>= "4.0.0"}
+  "mirage-kv" {>= "3.0.0"}
 ]
-
 synopsis: "MirageOS signatures for filesystem devices"
 description: """
-mirage-fs provides the `[Mirage_fs.S][fs]` and `[Mirage_fs_lwt.S]` signatures
+mirage-fs provides the `[Mirage_fs.S][fs]` signatures
 the MirageOS filesystem devices should implement.
 
 [fs]: http://mirage.github.io/mirage-fs/Mirage_fs.html
-[fslwt]: http://mirage.github.io/mirage-fs/Mirage_fs_lwt.html
 """
+post-messages: [
+  "This package will be retired in MirageOS 4.0. Please use mirage-kv instead."
+]
