compatibility with older mirage

--- a/src/dune
+++ b/src/dune
@@ -1,4 +1,5 @@
 (library
  (name        mirage_fs)
  (public_name mirage-fs)
- (libraries   fmt mirage-device lwt cstruct mirage-kv))
+ (libraries   fmt mirage-device lwt cstruct mirage-kv)
+ (wrapped false))
