--- a/mirage-fs.opam
+++ b/mirage-fs.opam
@@ -9,15 +9,14 @@ bug-reports:  "https://github.com/mirage/mirage-fs/issues"
 tags:         ["org:mirage"]
 
 build: [
-  ["dune" "subst"] {pinned}
+  ["dune" "subst"] {dev}
   ["dune" "build" "-p" name "-j" jobs]
 ]
 
 depends: [
-  "ocaml" {>= "4.06.0"}
+  "ocaml" {>= "4.08.0"}
   "dune"
   "fmt"
-  "mirage-device" {>= "2.0.0"}
   "lwt" {>= "4.0.0"}
   "cstruct" {>= "4.0.0"}
   "mirage-kv" {>= "3.0.0"}
